# k-CEE

./: .gitignore  README.md  app.py  pyproject.toml
.streamlit/: config.toml
.ui-guy/: INDEX.md  VERSION.md  alignment_guard.md  attribution_windows.md  design.md  gmm_clustering.md  kmeans_clustering.md  nan_rows.md  tsne_panel.md  wt_alignment.md
kcee_ui/: __init__.py  alignment.py  cache.py  data.py  defaults.py  finemo.py  loader.py  plotting.py  scoring.py  seam.py
kcee_ui/components/sphere_click/: index.html
tools/: build_attributions.py  build_seam_maps.py  npz_to_h5.py
