[project]
name = "kcee-ui"
version = "0.1.0"
description = "Streamlit UI for browsing AlphaGenome / LegNet attribution maps with cossim and eigenMaps scoring."
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.35",
    "numpy>=1.24",
    "pandas>=2.0",
    "h5py>=3.9",
    "matplotlib>=3.7",
    "logomaker>=0.8",
    "plotly>=5.18",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kcee_ui"]
